# gillilab-techlog

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: auth.py  config.py  logger.py  security.py
backend/app/models/: category.py  content.py  post.py  user.py
backend/app/routers/: auth.py  categories.py  posts.py
backend/app/services/: content_service.py  user_service.py
backend/data/: meta_cache.json
backend/data/ai.ml/: 0001.em.md  0002.ai-ethics.md  0003.small-llm.md  0004.generative-ai.md  0005.llm.md  0006.ai-democratization.md  0007.gpu-cluster.md  0008.finops.md  0009.cloud-cost-mgmt.md  0010.minicpm-o.md  0011.tabby-project.md  0012.browser-use.md  0013.browser-use-guide.md
backend/data/algorithm/: 0001.data-type.md
backend/data/bigdata/: 0001.dw.md  0002.bigdata.md
backend/data/blockchain/: 0001.blockchain.md  0002.blockchain-trend.md  0003.blockchain-layer2.md  0004.chain-interoperability.md  0005.zkp.md  0006.nft.md  0007.defi.md  0008.smart-contract.md
backend/data/ca.os/: 0001.booting-process.md
backend/data/db/: 0001.database.md  0002.relational-algebra.md
backend/data/etc/: 0001.sub-ghz.md
backend/data/iso/: 0001.iso38500.md
backend/data/it.biz/: 0001.isp.md  0002.ismp.md  0003.drs.md  0004.data-mining.md  0005.text-mining.md  0006.process-mining.md  0007.web-mining.md  0008.opinion-mining.md  0009.bsc.md  0010.it-bsc.md  0011.business-platform.md  0012.strategy-tools.md  0013.5forces.md  0015.7s.md  (+228 more)
(+280 files in other folders)
